add VerifyUserEmail controller #39
