# back/docs/swagger.yaml
@@ -316,6 +316,36 @@ paths:
       summary: Enregistrement d'un fichier dans le stockage R2
       tags:
       - UploadFileTest
+  /user/verify-email:
+    get:
+      consumes:
+      - application/json
+      description: Valide le token de vérification envoyé par email et met à jour
+        la propriété EmailVerified de l'utilisateur
+      parameters:
+      - description: Token de vérification envoyé par email
+        in: query
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Email vérifié avec succès
+          schema:
+            $ref: '#/definitions/ginresponse.JsonFormatterSwag'
+        "400":
+          description: Paramètres invalides ou token invalide/expiré
+          schema:
+            $ref: '#/definitions/ginresponse.JsonFormatterSwag'
+        "500":
+          description: Erreur interne lors de la vérification
+          schema:
+            $ref: '#/definitions/ginresponse.JsonFormatterSwag'
+      summary: Vérifie l'email d'un utilisateur
+      tags:
+      - user
 schemes:
 - https
 securityDefinitions:
